--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "author": "adegoke_sherif",
   "license": "ISC",
   "dependencies": {
-    "argon2": "^0.40.3",
     "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.5.1",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   },
